# slate-sphinx

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pages.yml
example/: README.md  pyproject.toml  setup.py
example/docs/: api.rst  conf.py  index.rst  installation.md  mathjax.rst  mathjax_md.md
example/docs/_autosummary/: package.module1.module1.rst  package.module1.module2.rst  package.module1.rst  package.module2.rst  package.module3.rst  package.rst  slate.sphinx.rst
example/docs/notebooks/: Example.ipynb
example/src/package/: module2.py
example/src/package/module1/: __init__.py
example/src/package/module1/module1/: __init__.py  module1.py
src/slate/sphinx/: __init__.py  layout.html
src/slate/sphinx/components/: example.py
src/slate/sphinx/static/: style.css  theme.js
