[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slate-sphinx-theme"
description = "Slate Sphinx Theme"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ariuna Systems", email = "contact@ariuna.systems" },
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

[project.entry-points."sphinx.html_themes"]
slate-sphinx-theme = "slate.sphinx"

[tool.setuptools.dynamic]
version = { attr = "slate.sphinx.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = [
    "theme.conf",
    "*.html",
    "static/*.js",
    "static/*.css",
    "static/fonts/*.*",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
