[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-sphinx"
version = "0.1.0"
description = "Example package and documentation site for the Slate Sphinx theme."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "myst-nb",
    "slate-sphinx-theme",
]
dev = [
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
